# backup-beca

chacras_ws/docs/: 00_construir_ws.md
chacras_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
chacras_ws/install/my_package/lib/my_package/: publisher  subscriber
chacras_ws/install/my_package/share/my_package/: package.sh
chacras_ws/log/: latest_build  latest_list
chacras_ws/src/install/: local_setup.sh  setup.sh
chacras_ws/src/log/: latest_build
chacras_ws/src/my_package/: package.xml  setup.py
chacras_ws/src/my_package/my_package/: publisher.py
ejercicios-ros/ejercicio-1/install/: local_setup.sh  setup.sh
ejercicios-ros/ejercicio-1/log/: latest_build  latest_list
ejercicios-ros/ejercicio-1/src/comms_basicas/: setup.py
ejercicios-ros/ejercicio-1/src/comms_basicas/comms_basicas/: generador_pulsos.py
ejercicios-ros/ejercicio-3/src/basic_comms/: setup.py
ejercicios-ros/ejercicio-4/src/basic_comms/: package.xml  setup.py
ejercicios-ros/ejercicio-5/src/chacras_sim/: package.xml  setup.cfg  setup.py
ejercicios-ros/ejercicio-5/src/my_interfaces/: CMakeLists.txt  package.xml
modbus_ws/install/: local_setup.sh  setup.sh
modbus_ws/log/: latest_build
modbus_ws/src/modbus_demo/: CMakeLists.txt  CMakelist.txt  package.xml
modbus_ws/src/modbus_demo/modbus_demo/: modbus_client.py  modbus_provider.py
modbus_ws/src/modbus_demo/modbus_demo/modbus/: connector.py  modbus_regs.py
modbus_ws/src/modbus_demo/modbus_demo/srv/: ReadRegister.srv  WriteRegister.srv
notes/ros-notes/: ANEXO A - Service type.md  Ejercicios.md
notes/ros-notes/.obsidian/: workspace.json
notes/ros-notes/teoría/: Nodos-python.md  T01 - Workspaces, nodos y tareas periódicas.md  T02 - Creación de nodos python.md  T04 - Services.md  T05 - Parámetros.md
ros-notes/: Schedule.md
ros-notes/.obsidian/: workspace.json
ros-notes/.obsidian/plugins/note-definitions/: data.json
ros-notes/Intro to ROS2/: 00 - Configuración del entorno.md  01 - Nodos.md  02 - Topics.md
ros-notes/MISC/: Computación distribuida y networking.md
(+14 files in other folders)
