<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>modbus_demo</name>
  <version>0.0.0</version>
  <description>Modbus demo package</description>
  <maintainer email="dariomarinroth@gmail.com">Dario Marin Roth</maintainer>
  <license>TODO: License declaration</license>

  <!-- Necesario para paquetes Python -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Necesario para generar interfaces -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Runtime de interfaces -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Dependencias Python -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>pymodbus</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <!-- IMPORTANTE: declarar que este paquete contiene interfaces -->
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
